@@ -1,5 +1,9 @@
 2020-03-02 Wiley E. Hill <wileyhill@gmail.com>
 
+    * src/widgets/geda_action.c: Revise geda_action_create_menu_item to
+      reverse the order of type checking; check for GEDA_IS_TOGGLE_ACTION
+      for checking for GEDA_IS_ACTION.
+
     * src/widgets/geda_menu.c: Utilize macro:
 
           * geda_get_widget_allocation
